[tool.poetry]
name = "poker-dash-board"
version = "0.1.0"
description = ""
authors = ["Frederico Wieser <frederico.wieser@gmail.com>"]
readme = "README.md"
packages = [{include = "poker_dash_board"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
streamlit = "*"
matplotlib = "*"
streamlit-plotly-events = "*"
ipdb = "*"
pandas = "*"
entrypoints = "^0.4"
altair = "4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
