[tool.poetry]
name = "poker-dash-board"
version = "0.1.0"
description = ""
authors = ["Frederico Wieser <frederico.wieser@gmail.com>"]
readme = "README.md"
#packages = [{include = "poker_dash_board"}]

[tool.poetry.dependencies]
python = "3.9.17"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
streamlit = "^1.24.0"
plotly = "^5.15.0"
tomli = "^2.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
